@@ -2,6 +2,7 @@ sunuo (0.4.1) unstable; urgency=low
 
   * added interface IPacket, implemented by class Packet
   * implemented abstract packet recycler code
+    - recycle MobileMoving
   * show correct client number in disconnect message
   * continued memory optimizations
     - eliminated most DateTime.Now calls
